Quick fix for navbar on mobile

--- a/app/assetsite/s/stylesheets/application.scss
+++ b/app/assetsite/s/stylesheets/application.scss
@@ -254,6 +254,10 @@ a:hover, a:focus {
     min-height: 60px;
   }
 
+  .navbar-collapse {
+    background-color: $footer-gray;
+  }
+
   .section {
     padding: $padding-large $padding-large;
   }
